--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'> <!-- Web font links-->
 	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' href='./css/default.css'> <!-- Default css for all pages -->
-    <link rel='stylesheet' type='text/css' href='./css/index.css'> <!-- CSS for all Index page -->
+    <link rel='stylesheet' type='text/css' href='.default.css'> <!-- Default css for all pages -->
+    <link rel='stylesheet' type='text/css' href='.index.css'> <!-- CSS for all Index page -->
     
   </head>
      <body> <!--Start of body section which contains content -->
      <!-- Here is our main header that is used across all the pages of our website -->
      <header class="logo">
-      <a href="./index.html"><img src="./images/logo.png" class="logo" alt="Haukai Logo Image failed to load" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
+      <a href="./index.html"><img src="./logo.png" class="logo" alt="Haukai Logo Image failed to load" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
     </header>
         <nav class="topnav" id="mytopnav"> <!-- Navigation section containing nav elements to access each page -->
           <a class="active" href='./index.html'>Home</a> <!-- Defining a hyperlink and creating "active" class indicating the current page -->
