--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'> <!-- Web font links-->
 	  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' href='.default.css'> <!-- Default css for all pages -->
-    <link rel='stylesheet' type='text/css' href='.index.css'> <!-- CSS for all Index page -->
+    <link rel='stylesheet' type='text/css' href='./default.css'> <!-- Default css for all pages -->
+    <link rel='stylesheet' type='text/css' href='./index.css'> <!-- CSS for all Index page -->
     
   </head>
      <body> <!--Start of body section which contains content -->
