--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <p>The Haukai Restaurant has a sleek and contemporary design, with an added twist of culture from traditional M&amacr;ori.</p>
        <p>We offer M&amacr;ori and P&amacr;keha kai and drinks.</p>
 
-    <img src="./images/interior_resize.jpg" class="interior" alt='The Haukai Restaurant interior image failed to load' title='The Haukai Restaurant interior'>
+    <img src="./interior_resize.jpg" class="interior" alt='The Haukai Restaurant interior image failed to load' title='The Haukai Restaurant interior'>
     </div>
     <div class="col-2"></div>
     </div>
