--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <nav class="topnav" id="mytopnav"> <!-- Navigation section containing nav elements to access each page -->
           <a class="active" href='./index.html'>Home</a> <!-- Defining a hyperlink and creating "active" class indicating the current page -->
           <a href='./menu/menu.html'>Menu</a>
-          <a href='./reservations/reservations.html'>Reservations</a> 
-          <a href='./hours/hours.html'>Hours</a>
-          <a href='./about/about.html'>About Us</a>
-          <a href='./contact/contact.html'>Contact</a>
+          <a href='./reservations.html'>Reservations</a> 
+          <a href='./hours.html'>Hours</a>
+          <a href='./about.html'>About Us</a>
+          <a href='./contact.html'>Contact</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
           </a>
@@ -63,8 +63,8 @@
   <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
-      <a href='../index.html'>Home</a>  <!-- Return to home added for ease of user -->
-      <a href='../policies/privacy.html'>Policies</a>
+      <a href='./index.html'>Home</a>  <!-- Return to home added for ease of user -->
+      <a href='./policies/privacy.html'>Policies</a>
       <a href='../contact/contact.html'>Contact</a>
     </div>
     <div class="col-4">
