--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
         <nav class="topnav" id="mytopnav"> <!-- Navigation section containing nav elements to access each page -->
           <a class="active" href='./index.html'>Home</a> <!-- Defining a hyperlink and creating "active" class indicating the current page -->
-          <a href='./menu/menu.html'>Menu</a>
+          <a href='./menu.html'>Menu</a>
           <a href='./reservations.html'>Reservations</a> 
           <a href='./hours.html'>Hours</a>
           <a href='./about.html'>About Us</a>
