--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 		<link href='https://fonts.googleapis.com/css?family=Allison' rel='stylesheet'>
 		<link href='https://fonts.googleapis.com/css?family=Gelasio' rel='stylesheet'>
-		<link rel='stylesheet' type='text/css' href='../css/default.css'>
+		<link rel='stylesheet' type='text/css' href='./default.css'>
     </head>
 	
     <body>
@@ -42,13 +42,13 @@
     
 	<div class="menu"> <!-- Defined div of "menu" created -->
 			<a href="./appetizers.html">
-			<img src="../images/1.png" alt="The Haukai Restaurant Appetizers Menu" title="Appetizers Menu"></a>
-			<a href="../images/main.PNG" target="_blank">
-			<img src="../images/2.png" alt="The Haukai Restaurant Main Menu" title="Main Menu"></a>
-			<a href="../images/dessert.PNG" target="_blank">
-			<img src="../images/3.png" alt="The Haukai Restaurant Desserts Menu" title="Desserts Menu"></a>
-			<a href="../images/beverages.PNG" target="_blank">
-			<img src="../images/4.png" alt="The Haukai Restaurant Beverages Menu" title="Beverages Menu"></a>
+			<img src="../1.png" alt="The Haukai Restaurant Appetizers Menu" title="Appetizers Menu"></a>
+			<a href="../main.PNG" target="_blank">
+			<img src="../.png" alt="The Haukai Restaurant Main Menu" title="Main Menu"></a>
+			<a href="../dessert.PNG" target="_blank">
+			<img src="../3.png" alt="The Haukai Restaurant Desserts Menu" title="Desserts Menu"></a>
+			<a href="../beverages.PNG" target="_blank">
+			<img src="../4.png" alt="The Haukai Restaurant Beverages Menu" title="Beverages Menu"></a>
 	</div> <!-- Defined div of "menu" closed -->
  
 	<div>
