--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 	
     <body>
 		<header class="logo">
-			<a href="../index.html"><img src="../images/logo.png" class="logo" alt="Haukai Logo Image" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
+			<a href="../index.html"><img src="./logo.png" class="logo" alt="Haukai Logo Image" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
 		</header>
 			  <nav class="topnav" id="mytopnav"> 
 				<a href='../index.html'>Home</a> 
@@ -42,13 +42,13 @@
     
 	<div class="menu"> <!-- Defined div of "menu" created -->
 			<a href="./appetizers.html">
-			<img src="../1.png" alt="The Haukai Restaurant Appetizers Menu" title="Appetizers Menu"></a>
-			<a href="../main.PNG" target="_blank">
-			<img src="../.png" alt="The Haukai Restaurant Main Menu" title="Main Menu"></a>
-			<a href="../dessert.PNG" target="_blank">
-			<img src="../3.png" alt="The Haukai Restaurant Desserts Menu" title="Desserts Menu"></a>
-			<a href="../beverages.PNG" target="_blank">
-			<img src="../4.png" alt="The Haukai Restaurant Beverages Menu" title="Beverages Menu"></a>
+			<img src="./1.png" alt="The Haukai Restaurant Appetizers Menu" title="Appetizers Menu"></a>
+			<a href="./main.PNG" target="_blank">
+			<img src="./.png" alt="The Haukai Restaurant Main Menu" title="Main Menu"></a>
+			<a href="./dessert.PNG" target="_blank">
+			<img src="./3.png" alt="The Haukai Restaurant Desserts Menu" title="Desserts Menu"></a>
+			<a href="./beverages.PNG" target="_blank">
+			<img src="./4.png" alt="The Haukai Restaurant Beverages Menu" title="Beverages Menu"></a>
 	</div> <!-- Defined div of "menu" closed -->
  
 	<div>
