--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-       <h1>Welcome</h1>
+      <h1>Welcome</h1>
        <p>The Haukai Restaurant has a sleek and contemporary design, with an added twist of culture from traditional M&amacr;ori.</p>
        <p>We offer M&amacr;ori and P&amacr;keha kai and drinks.</p>
-    
+
+ 
   <!-- Gallery -->
 <div class="row gallery">
   <div class="column">
@@ -58,6 +59,9 @@
   </div> 
 </div>
 
+<!-- Gallery ends-->
+    </div>  
+<div class="col-2"></div>
     
   </div>
      </main>
