--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <body> <!--Start of body section -->
      <!-- Here is our main header that is used across all the pages of our website -->
      <header class="logo">
-      <a href="./index.html"><img src="./images/logo.png" class="logo" alt="Haukai Logo Image failed to load" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
+      <a href="./index.html"><img src="./images/logo2.png" class="logo" alt="Haukai Logo Image failed to load" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
     </header>
 
         <nav class="topnav" id="mytopnav"> <!-- Navigation section containing nav elements to access each page -->
@@ -52,15 +52,15 @@
     <img src="./images/koru.jpg" class="koru" title='Beautiful koru from a Fern' alt='Beautiful koru from a fern image unable to load' onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="./images/salmon.jpg" class="salmon" title='Delicious Salmon Main dish' alt='Delicious Salmon dish image unable to load' onclick="myFunction(this);">
+    <img src="./images/salmon2.jpg" class="salmon" title='Delicious Salmon Main dish' alt='Delicious Salmon dish image unable to load' onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="./images/dining.png" class="dining" title='Dining in the Conservatory' alt='Dining in Conservatory image failed to load' onclick="myFunction(this);">
+    <img src="./images/dining2.png" class="dining" title='Dining in the Conservatory' alt='Dining in Conservatory image failed to load' onclick="myFunction(this);">
   </div> 
 </div>
-
 <!-- Gallery ends-->
-    </div>  
+
+         </div>   <!-- col 8 ends-->
 <div class="col-2"></div>
     
   </div>
