--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
    <!-- Gallery -->
    <div class="row gallery">
       <div class="column">
-        <img src="./images/interior1.jpg" class="interior" title='The Haukai Restaurant interior' alt='The Haukai Restaurant interior image failed to load'>
+        <img src="./images/interior.jpg" class="interior" title='The Haukai Restaurant interior' alt='The Haukai Restaurant interior image failed to load'>
      </div>
       <div class="column">
-       <img src="./images/koru1.jpg" class="koru" title='Beautiful koru from a Fern' alt='Beautiful koru from a fern image unable to load'>
+       <img src="./images/koru.jpg" class="koru" title='Beautiful koru from a Fern' alt='Beautiful koru from a fern image unable to load'>
       </div>
       <div class="column">
         <img src="./images/salmon.jpg" class="salmon" title='Delicious Salmon Main dish' alt='Delicious Salmon dish image unable to load'>
