--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             </p>
             <p>We offer M&amacr;ori and P&amacr;keha kai and drinks.</p>
 
-                       
+            <!-- Gallery -->
+            <div class="row gallery">
+              <div class="column">
                 <img
                   src="./images/interior.jpg"
                   class="interior"
@@ -80,7 +82,29 @@
                   alt="The Haukai Restaurant interior image failed to load"
                 />
               </div>
-              
+              <div class="column">
+                <img
+                  src="./images/koru.jpg"
+                  class="koru"
+                  title="Beautiful koru from a Fern"
+                  alt="Beautiful koru from a fern image unable to load"
+                />
+              </div>
+              <div class="column">
+                <img
+                  src="./images/salmon.jpg"
+                  class="salmon"
+                  title="Delicious Salmon Main dish"
+                  alt="Delicious Salmon dish image unable to load"
+                />
+              </div>
+              <div class="column">
+                <img
+                  src="./images/dining.png"
+                  class="dining"
+                  title="Dining in the Conservatory"
+                  alt="Dining in Conservatory image failed to load"
+                />
               </div>
             </div>
             <!-- Gallery ends-->
