Final AS2 Submitted

--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
   <!-- Document type with language English defined -->
 
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <!-- Charset attribute specifies the character encoding-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Used to control layout on mobile devices by width of screen -->
     <title>Haukai Restaurant - Home Page</title>
     <!-- Style sheets added below for Social Media Links and css sheets - Web Fonts links also here -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    >
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather"
       rel="stylesheet"
-    />
+    >
     <!-- Web font links-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="./styles/default.css" />
+    >
+    <link rel="stylesheet" type="text/css" href="./styles/default.css">
     <!-- Default css for all pages -->
-    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/index.css">
     <!-- CSS for all Index page -->
   </head>
   <body>
@@ -37,7 +37,7 @@
           class="logo"
           alt="Haukai Logo Image failed to load"
           title="Haukai Restaurant Logo"
-      /></a>
+      ></a>
       <!-- Defining link to ensure the logo links back to Homepage -->
     </header>
 
@@ -80,7 +80,7 @@
                   class="interior"
                   title="The Haukai Restaurant interior"
                   alt="The Haukai Restaurant interior image failed to load"
-                />
+                >
               </div>
               <div class="column">
                 <img
@@ -88,7 +88,7 @@
                   class="koru"
                   title="Beautiful koru from a Fern"
                   alt="Beautiful koru from a fern image unable to load"
-                />
+                >
               </div>
               <div class="column">
                 <img
@@ -96,7 +96,7 @@
                   class="salmon"
                   title="Delicious Salmon Main dish"
                   alt="Delicious Salmon dish image unable to load"
-                />
+                >
               </div>
               <div class="column">
                 <img
@@ -104,7 +104,7 @@
                   class="dining"
                   title="Dining in the Conservatory"
                   alt="Dining in Conservatory image failed to load"
-                />
+                >
               </div>
             </div>
             <!-- Gallery ends-->
@@ -118,7 +118,9 @@
     <!-- And here is our main footer that is used across all the pages of our website -->
     <footer>
       <div class="row">
-        <div class="col-4"></div>
+        <div class="col-4">
+        <a class="staff" href="./roster/roster.html">Staff Access</a>
+        </div>
         <div class="col-4">
           <a href="./index.html">Home</a>
           <!-- Return to home added for ease of user -->
