--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,94 +1,131 @@
 <!DOCTYPE html>
-<html>
- 
-    <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Haukai Restaurant - Contact</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
-		<link rel='stylesheet' type='text/css' href='../css/default.css'>
-	</head>
-    <body>
-	 
-		<header class="logo">
-			<a href="../index.html"><img src="../images/logo.png" class="logo" alt="Haukai Logo Image" title="Haukai Restaurant Logo"></a> <!-- Defining link to ensure the logo links back to Homepage -->
-		  </header>
-		  <nav class="topnav" id="mytopnav"> <!-- Navigation section containing nav elements to access each page -->
-			<a href='../index.html'>Home</a> <!-- Defining a hyperlink and creating "active" class indicating the current page -->
-			<a href='../menu/menu.html'>Menu</a>
-			<a href='../reservations/reservations.html'>Reservations</a> 
-			<a href='../hours/hours.html'>Hours</a>
-			<a href='../story/story.html'>Our Story</a>
-			<a class="active" href='../contact/contact.html'>Contact</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i>
-			</a>
-		</nav> 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Haukai Restaurant - Contact Us</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    >
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather"
+      rel="stylesheet"
+    >
+    <link rel="stylesheet" type="text/css" href="../styles/default.css" >
+  </head>
+  <body>
+    <header class="logo">
+      <a href="../index.html"
+        ><img
+          src="../images/logo.png"
+          class="logo"
+          alt="Haukai Logo Image"
+          title="Haukai Restaurant Logo"
+      ></a>
+      <!-- Defining link to ensure the logo links back to Homepage -->
+    </header>
+    <nav class="topnav" id="mytopnav">
+      <!-- Navigation section containing nav elements to access each page -->
+      <a href="../index.html">Home</a>
+      <!-- Defining a hyperlink and creating "active" class indicating the current page -->
+      <a href="../menu/menu.html">Menu</a>
+      <a href="../reservations/reservations.html">Reservations</a>
+      <a href="../hours/hours.html">Opening Hours</a>
+      <a href="../story/story.html">Our Story</a>
+      <a class="active" href="../contact/contact.html">Contact</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </nav>
 
-<main class="content">
-
-	<div class = "contact">
+    <main class="content">
+      <div class="contact">
         <h1>Contact</h1>
-		<br>
+        <br>
         <p>Please contact us with any enquiries.</p>
-        <p><b>Phone:</b> on (00)1234 1122 <br> </p>
-		<p><b>Email:</b> thehaukai@haukai.com </p>
-	</div>
-<br>
-<br>
-<div class="location">
-	<h2>Our location</h2>
-	<br>
-	<p>You can find us in the beautiful Bay of Islands at
-	<br><em>1 Island Street, Kerikeri, Bay Of Islands, New Zealand</em></p> 
-	<!-- Embedded Google Map with alternative text added if image does not load and for accessibility for users with disabilities -->
-	<br>
-	<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d73739.95815155009!2d173.88585688384305!3d-35.23444354286973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0bb76f05800a6d%3A0x912328fde4819391!2sHaukai%20Restaurant!5e0!3m2!1sen!2snz!4v1672890331716!5m2!1sen!2snz" alt='Google Map for The Haukai Restaurant unable to load'></iframe>
-</div>	
-<br>
-<img src="../images/bay.jpg" class="bay" title='Bay of Islands' alt='Bay of Islands coastal image failed to load'> 
+        <p><b>Phone:</b> (07) 7881 9234 <br></p>
+        <p><b>Email:</b> thehaukai@haukai.com</p>
+      </div>
+      <br>
+      <br>
+      <div class="location">
+        <h2>Our location</h2>
+        <br>
+        <p>
+          You can find us in the beautiful Bay of Islands at <br><em
+            >1 Island Street, Kerikeri, Bay Of Islands, New Zealand</em
+          >
+        </p>
+        <!-- Embedded Google Map with alternative text added if image does not load and for accessibility for users with disabilities -->
+        <br>
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d73739.95815155009!2d173.88585688384305!3d-35.23444354286973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0bb76f05800a6d%3A0x912328fde4819391!2sHaukai%20Restaurant!5e0!3m2!1sen!2snz!4v1672890331716!5m2!1sen!2snz"
+        ></iframe>
+      </div>
+      <br>
+      <img
+        src="../images/bay.jpg"
+        class="bay"
+        title="Bay of Islands"
+        alt="Bay of Islands coastal image failed to load"
+      >
 
-<br><br>
+      <br><br>
+    </main>
 
-</main>
+    <footer>
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <a href="../index.html">Home</a>
+          <!-- Return to home added for ease of user -->
+          <a href="../policies/privacy.html">Policies</a>
+          <a href="../contact/contact.html">Contact</a>
+        </div>
+        <div class="col-4">
+          <div class="row">
+            <a href="../reservations/reservations.html"><h5>book now!</h5></a>
+          </div>
+          <div class="row">
+            <div class="socials">
+              <a
+                href="https://www.facebook.com/"
+                class="fa fa-facebook"
+                title="The Haukai Restaurant Facebook Page"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="fa fa-instagram"
+                title="The Haukai Restaurant Instagram Page"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<footer>
-	<div class="row">
-		<div class="col-4"></div>
-		<div class="col-4">
-		  <a href='../index.html'>Home</a>  <!-- Return to home added for ease of user -->
-		  <a href='../policies/privacy.html'>Policies</a>
-		  <a href='../contact/contact.html'>Contact</a>
-		</div>
-		<div class="col-4">
-		  <div class="row"><a href='../reservations/reservations.html'><h5>book now!</h5></a>
-		  </div>
-		  <div class="row">
-			<div class="socials">
-			  <a href="https://www.facebook.com/" class="fa fa-facebook" alt='The Haukai Restaurant Facebook Page failed to load' title='The Haukai Restaurant Facebook Page' target="_blank"></a>
-			  <a href="https://www.instagram.com/" class="fa fa-instagram" alt='The Haukai Restaurant Instagram Page failed to load' title='The Haukai Restaurant Instagram Page' target="_blank" ></a>
-			</div>   
-		  </div> 
-		  </div>
-	  </div>
-	
-	  <span class="copyright">&copy; Copyright 2022 by The Haukai Restaurant</span>
-  </footer>
-	
-  	  <!-- Javascript to ensure nav is responsive-->
-		<script>
-			function myFunction() {
-			  var x = document.getElementById("mytopnav");
-			  if (x.className === "topnav") {
-				x.className += " responsive";
-			  } else {
-				x.className = "topnav";
-			  }
-			}
-			</script>
+      <span class="copyright"
+        >&copy; Copyright 2022 by The Haukai Restaurant</span
+      >
+    </footer>
 
-    </body>
- 
+    <!-- Javascript to ensure nav is responsive-->
+    <script>
+      function myFunction() {
+        var x = document.getElementById("mytopnav");
+        if (x.className === "topnav") {
+          x.className += " responsive";
+        } else {
+          x.className = "topnav";
+        }
+      }
+    </script>
+  </body>
 </html>
