--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <!-- Document type with language English defined -->
 
   <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="description" content="The Haukai Restaurant in Bay of Islands, where delcious kai plays on Maori and Pakeha fushion">
+    <meta name="keywords" content="The Haukai Restaurant, The Haukai, Restaurant, Maori Food, Maori culture, Pakeha food, kai, Bay of Islands, food">
     <!-- Charset attribute specifies the character encoding-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Used to control layout on mobile devices by width of screen -->
