Google analyitcs tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <!-- Charset attribute specifies the character encoding-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Used to control layout on mobile devices by width of screen -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNTDNR83YR');
+</script>
     <title>Haukai Restaurant - Home Page</title>
     <!-- Style sheets added below for Social Media Links and css sheets - Web Fonts links also here -->
     <link
