Google Analytics / Roster page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="The Haukai Restaurant in Bay of Islands, where delcious kai plays on Maori and Pakeha fushion">
-    <meta name="keywords" content="The Haukai Restaurant, The Haukai, Restaurant, Maori Food, Maori culture, Pakeha food, kai, Bay of Islands, food">
+    <meta name="description" content="The Haukai Restaurant in the beautiful Bay of Islands, where delcious kai comes from the fusion of Maori and Pakeha delights.">
+    <meta name="keywords" content="The Haukai Restaurant, The Haukai in Kerikeri, Restaurant in the Bay of Islands, Maori Food in Kerikeri, Maori culture in Bay of Islands, Pakeha food, kai in Kerikeri, Bay of Islands Restaurant with Maori Tradition, food in Bay of Islands">
     <!-- Charset attribute specifies the character encoding-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Used to control layout on mobile devices by width of screen -->
-    <!-- Google tag (gtag.js) -->
+    <!-- Google tag for Google Analytics  (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -18,7 +18,7 @@
 
   gtag('config', 'G-GNTDNR83YR');
 </script>
-    <title>Haukai Restaurant - Home Page</title>
+    <title>The Haukai Restaurant - Home Page</title>
     <!-- Style sheets added below for Social Media Links and css sheets - Web Fonts links also here -->
     <link
       rel="stylesheet"
