--- a/policies/privacy.html
+++ b/policies/privacy.html
@@ -4,6 +4,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag for Google Analytics  (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNTDNR83YR');
+</script>
     <title>Haukai Restaurant - Privacy Policy</title>
     <link
       rel="stylesheet"
