--- a/story/story.html
+++ b/story/story.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <!-- Charset attribute specifies the character encoding-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Used to control layout on mobile devices by width of screen -->
+    <!-- Google tag for Google Analytics  (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNTDNR83YR');
+</script>
     <title>Haukai Restaurant - Our Story</title>
     <!-- Style sheets added below for Social Media Links and css sheets - Web Fonts links also here -->
     <link
