--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Haukai Restaurant - Contact Us</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    >
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    >
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather"
-      rel="stylesheet"
-    >
+    <!-- Google tag for Google Analytics  (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNTDNR83YR');
+</script>
+    <title>The Haukai Restaurant - Contact Us</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"  >
     <link rel="stylesheet" type="text/css" href="../styles/default.css" >
   </head>
   <body>
