--- a/reservations/reservations.html
+++ b/reservations/reservations.html
@@ -3,9 +3,16 @@
 
     <head>
       <meta charset="UTF-8">
-      <!-- Charset attribute specifies the character encoding-->
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <!-- Used to control layout on mobile devices by width of screen -->
+      <!-- Google tag for Google Analytics  (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNTDNR83YR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNTDNR83YR');
+</script>
       <title>The Haukai Restaurant - Reservations</title>
 
       <link
@@ -19,8 +26,7 @@
       <link rel="stylesheet" type="text/css" href="../styles/default.css">
     </head>
     <body>
-      <!--Start of body section which contains content -->
-      <!-- Here is our main header that is used across all the pages of our website -->
+     
       <header class="logo">
         <a href="../index.html"
           ><img
@@ -29,7 +35,7 @@
             alt="Haukai Logo Image"
             title="Haukai Restaurant Logo"
         ></a>
-        <!-- Defining link to ensure the logo links back to Homepage -->
+
       </header>
       <nav class="topnav" id="mytopnav">
         <a href="../index.html">Home</a>
@@ -45,7 +51,6 @@
         </a>
       </nav>
 
-      <!-- Here is our page's main content -->
       <main>
         <h2>Book a table with us at The Haukai</h2>
         <br>
@@ -65,11 +70,9 @@
 
       <footer>
         <div class="row">
-          <div class="col-4">
-          </div>
+          <div class="col-4"></div>
           <div class="col-4">
             <a href="../index.html">Home</a>
-            <!-- Return to home added for ease of user -->
             <a href="../policies/privacy.html">Policies</a>
             <a href="../contact/contact.html">Contact</a>
           </div>
@@ -98,7 +101,6 @@
         >
       </footer>
 
-      <!-- Javascript to ensure nav is responsive-->
       <script>
         function myFunction() {
           var x = document.getElementById("mytopnav");
