--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
 
       <span class="copyright"
-        >&copy; Copyright 2022 by The Haukai Restaurant</span
+        >&copy; Copyright 2023 by RAA Design</span
       >
     </footer>
 
