--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           <a href="https://www.instagram.com/" class="fa fa-instagram" target="_blank" ></a>
         </div>
       </div>
-    <span class="copyright">&copy; Copyright 2022 by The Haukai Restaurant</span>
+    <span class="copyright">&copy; Copyright 2023 by RAA Design</span>
     </footer>
 
    </body>
