--- a/story/story.html
+++ b/story/story.html
@@ -122,7 +122,7 @@
         </div>
       </div>
       <span class="copyright"
-        >&copy; Copyright 2022 by The Haukai Restaurant</span
+        >&copy; Copyright 2023 by RAA Design</span
       >
     </footer>
 
