--- a/policies/privacy.html
+++ b/policies/privacy.html
@@ -137,7 +137,7 @@
       </div>
 
       <span class="copyright"
-        >&copy; Copyright 2022 by The Haukai Restaurant</span
+        >&copy; Copyright 2023 by RAA Design</span
       >
     </footer>
 
